infrastructure/kubernetes/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: civa-gateway
  namespace: civa
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: civa-tls-cert
      hosts:
        - "api.civa.internal"
        - "*.civa.internal"
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "api.civa.internal"
      tls:
        httpsRedirect: true
